--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -128,9 +128,9 @@ data:
     use_blueprint:
       path: _defaults/hue_light_defaults.yaml
       input:
-        living_room_lights:
+        target_lights:
           - light.living_room
-        living_room_switch_events:
+        switch_events:
           - event.living_room_switch_button_1
         only_when_manual: true
         settle_seconds: 0
