Fix template error in hue_switch_control blueprint
- Remove from_yaml filter which doesn't exist in Home Assistant
- Use direct template string for custom_service_data

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -489,5 +489,5 @@ data:
                       - service: "{{ custom_service }}"
                         target:
                           entity_id: !input target_lights
-                        data: "{{ custom_service_data | from_yaml }}"
+                        data: "{{ custom_service_data }}"
 
