Fix Hue switch control logic
- Change buttons 2,3,4 to trigger on 'short_release' instead of 'initial_press'
- Fix brightness calculation to use target_lights[0] properly
- This should fix toggle, brightness, and scene cycling

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -164,7 +164,7 @@ action:
       # Button 2: Brightness up
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'initial_press' }}"
+            value_template: "{{ trigger.to_state.state == 'short_release' }}"
           - condition: template
             value_template: "{{ button_2_brightness_up }}"
         sequence:
@@ -180,7 +180,7 @@ action:
       # Button 3: Brightness down
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'initial_press' }}"
+            value_template: "{{ trigger.to_state.state == 'short_release' }}"
           - condition: template
             value_template: "{{ button_3_brightness_down }}"
         sequence:
@@ -196,7 +196,7 @@ action:
       # Button 4: Custom action
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'initial_press' }}"
+            value_template: "{{ trigger.to_state.state == 'short_release' }}"
           - condition: template
             value_template: "{{ button_4_custom }}"
         sequence:
