Add long press functionality to Hue switch control
- Button 1 long press: Turn off all lights in home (default)
- Button 4 long press: Activate room relax scene (default)
- Add configurable long press actions for both buttons
- Update living room automation with long press settings

--- a/gitops/apps/home-assistant/automations/living_room_switch_control.yaml
+++ b/gitops/apps/home-assistant/automations/living_room_switch_control.yaml
@@ -16,6 +16,11 @@ use_blueprint:
       - scene.living_room_nightlight
       - scene.living_room_relax
       - scene.living_room_energize
+    button_1_long_press: true
+    button_1_long_action: all_lights_off
+    button_4_long_press: true
+    button_4_long_action: room_relax_scene
+    room_relax_scene: scene.living_room_relax
     brightness_step: 25
     min_brightness: 1
     max_brightness: 255
