--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -192,8 +192,10 @@ variables:
   max_brightness: !input max_brightness
 
 trigger:
-  - platform: state
-    entity_id: !input switch_entity
+  - platform: event
+    event_type: hue_event
+    event_data:
+      id: "{{ switch_entity.split('.')[-1].replace('_button_1', '_switch_button') }}"
 
 condition: []
 
@@ -202,7 +204,7 @@ action:
       # Button 1: Toggle lights (short press)
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'initial_press' }}"
+            value_template: "{{ trigger.event.data.type == 'initial_press' and trigger.event.data.subtype == 1 }}"
           - condition: template
             value_template: "{{ button_1_toggle }}"
         sequence:
@@ -213,7 +215,7 @@ action:
       # Button 1: Long press action
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'long_release' }}"
+            value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 1 }}"
           - condition: template
             value_template: "{{ button_1_long_press }}"
         sequence:
@@ -237,7 +239,7 @@ action:
       # Button 2: Brightness up
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'short_release' }}"
+            value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 2 }}"
           - condition: template
             value_template: "{{ button_2_brightness_up }}"
         sequence:
@@ -253,7 +255,7 @@ action:
       # Button 3: Brightness down
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'short_release' }}"
+            value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 3 }}"
           - condition: template
             value_template: "{{ button_3_brightness_down }}"
         sequence:
@@ -269,7 +271,7 @@ action:
       # Button 4: Custom action
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'short_release' }}"
+            value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 4 }}"
           - condition: template
             value_template: "{{ button_4_custom }}"
         sequence:
@@ -325,7 +327,7 @@ action:
       # Button 4: Long press action
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'long_release' }}"
+            value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 4 }}"
           - condition: template
             value_template: "{{ button_4_long_press }}"
         sequence:
