--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -437,7 +437,7 @@ data:
       - platform: event
         event_type: hue_event
         event_data:
-          id: "{{ switch_entity.split('.')[-1].replace('_button_1', '_switch_button') }}"
+          id: "{{ switch_entity.split('.')[-1].replace('_button_1', '_switch_button').replace('_button_2', '_switch_button').replace('_button_3', '_switch_button').replace('_button_4', '_switch_button') }}"
     
     condition: []
     
