Fix switch_entity template variable error in hue_switch_control blueprint
- Remove switch_entity from trigger template (not available in trigger context)
- Add condition to filter for correct switch ID using template
- This fixes the 'switch_entity is undefined' error

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -436,10 +436,12 @@ data:
     trigger:
       - platform: event
         event_type: hue_event
-        event_data:
-          id: "{{ switch_entity.split('.')[-1].replace('_button_1', '_switch_button') }}"
     
-    condition: []
+    condition:
+      - condition: template
+        value_template: >
+          {% set expected_id = switch_entity.split('.')[-1].replace('_button_1', '_switch_button').replace('_button_2', '_switch_button').replace('_button_3', '_switch_button').replace('_button_4', '_switch_button') %}
+          {{ trigger.event.data.id == expected_id }}
     
     action:
       - choose:
