Fix switch ID matching by replacing button suffix correctly
- Change from _button_1 → _switch_button to _button_1 → _button
- This prevents double _switch replacement
- Now living_room_switch_button_1 → living_room_switch_button (matches event data)

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -200,13 +200,13 @@ condition:
     value_template: >
       {% set entity_name = switch_entity.split('.')[-1] %}
       {% if entity_name.endswith('_button_1') %}
-        {% set expected_id = entity_name.replace('_button_1', '_switch_button') %}
+        {% set expected_id = entity_name.replace('_button_1', '_button') %}
       {% elif entity_name.endswith('_button_2') %}
-        {% set expected_id = entity_name.replace('_button_2', '_switch_button') %}
+        {% set expected_id = entity_name.replace('_button_2', '_button') %}
       {% elif entity_name.endswith('_button_3') %}
-        {% set expected_id = entity_name.replace('_button_3', '_switch_button') %}
+        {% set expected_id = entity_name.replace('_button_3', '_button') %}
       {% elif entity_name.endswith('_button_4') %}
-        {% set expected_id = entity_name.replace('_button_4', '_switch_button') %}
+        {% set expected_id = entity_name.replace('_button_4', '_button') %}
       {% else %}
         {% set expected_id = entity_name %}
       {% endif %}
